# send-message-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: auth.py  security.py  send_folha_ponto.py  send_folha_ponto_ativos.py  utils.py
app/api/v1/schemas/: auth_schema.py  folha_ponto_schema.py  security_schema.py  token_schema.py
app/core/: logger.py  security.py  settings.py
app/docs/: rota_get_api_v1_health.md  rota_post_api_v1_authenticate.md  rota_post_api_v1_security_create.md  rota_post_api_v1_security_hash_password.md  rota_post_api_v1_send_folha_ponto_ativos.md  worker_meta_queue_worker.md
app/infra/db/: db_client.py  models.py
app/infra/db/repositories/: user_repository.py
app/infra/rabbitmq/: rabbitmq_client.py
app/services/: auth_service.py  folha_ponto_ativos_service.py  folha_ponto_service.py  meta_request_service.py
app/utils/: file_utils.py
app/workers/: meta_queue_worker.py
