[project]
name = "send-message-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "pandas>=2.3.2",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0,<5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.38.0",
    "psycopg2-binary>=2.9.10",
    "aio-pika>=9.5.8",
]

